Rework of DtoValidator
The DtoValidator does not implement Validator anymore and is an internal class.